# TetsawSDL3

./: .gitignore  CMakeLists.txt  README.md  emscripten_shell.html
.github/workflows/: emscripten.yml  main.yml
android-project/: .gitignore  README.md  settings.gradle
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/technicjelle/tetsaw/: TetsawActivity.java
android-project/app/src/main/java/org/libsdl/helloworld/: HelloWorldActivity.java
android-project/app/src/main/res/values/: strings.xml  styles.xml
src/: board.c  board.h  cell.h  draw_utils.c  draw_utils.h  main.c  myappstate.c  myappstate.h
